deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blockchain-backend
spec:
  selector:
    app: blockchain-backend
  type: NodePort
  ports:
  - protocol: TCP
    port: 1323
    targetPort: 1323
    nodePort: 30000
    name: api
